@@ -1,11 +1,11 @@
 [versions]
-crate_server = 0.46.3
+crate_server = 0.46.5
 
 zc.buildout = 2.2.0
 zc.recipe.egg = 2.0.0
 zc.recipe.testrunner = 2.0.0
-setuptools = 1.1
 lovely.testlayers = 0.6.0
+setuptools = 12.1
 
 Jinja2 = 2.7.3
 MarkupSafe = 0.23
@@ -27,7 +27,6 @@ zc.customdoctests = 1.0.1
 zc.recipe.egg = 2.0.1
 zc.recipe.testrunner = 2.0.0
 zope.testing = 4.1.3
-setuptools = 12.0.5
 
 # Required by:
 # prompt-toolkit==0.20
