@@ -5,6 +5,9 @@ Changes for crash
 Unreleased
 ==========
 
+ - Fix: do not print ``rows affected`` in status message
+   of DDL statements and other statements that do not affect rows
+
 2015/02/03 0.11.1
 =================
 
